clusters/homelab/apps/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-service
  namespace: apps
spec:
  selector:
    app: homepage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
